--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -22,7 +22,7 @@ default: &default
 
 development:
   <<: *default
-  host: localhost
+  # host: localhost
   database: dev_db
 
 # Warning: The database defined as "test" will be erased and
@@ -30,7 +30,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  host: localhost
+  # host: localhost
   database: test_db
 
 # As with config/secrets.yml, you never want to store sensitive information,
