--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -52,8 +52,8 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1
     environment:
       - discovery.type=single-node
-    volumes:
-      - ../src/instapp/elastic-data:/usr/share/elasticsearch/data
+#    volumes:
+#      - ../src/instapp/elastic-data:/usr/share/elasticsearch/data
     ports:
       - "9201:9200"
       - "9301:9300"
